[package]
name = "powerbuilder-ls"
version = "0.1.0"
edition = "2021"

[toolchain]
channel = "nightly"

# [lib]
# proc-macro = true
# path = "src/proc.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
dashmap = "6.1.0"
defer = "0.2.1"
encoding_rs = "0.8.34"
encoding_rs_io = "0.1.7"
futures = "0.3.30"
multipeek = "0.1.2"
notify = "6.1.1"
pbjson = "0.7.0"
prost = "0.13.2"
scopeguard = "1.2.0"
serde = "1.0.210"
serde_json = "1.0.128"
strum = { version = "0.26.2", features = ["derive"] }
strum_macros = "0.26.2"
tokio = { version = "1.40.0", features = ["full"] }
tower-lsp = "0.20.0"
unicase = "2.7.0"

[build-dependencies]
prost-build = "0.13.2"
protobuf-src = "2.1.0"
pbjson-build = "0.7.0"
