[package]
name = "powerbuilder-ls"
version = "0.1.0"
edition = "2021"

# [lib]
# proc-macro = true
# path = "src/proc.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
console-subscriber = "0.4.1"
dashmap = "6.1.0"
defer = "0.2.1"
encoding_rs = "0.8.34"
encoding_rs_io = "0.1.7"
futures = "0.3.30"
multipeek = "0.1.2"
notify = "6.1.1"
pbjson = "0.7.0"
percent-encoding = "2.3.1"
prost = "0.13.2"
regex = "1.11.1"
ropey = "1.6.1"
roxmltree = "0.20.0"
scopeguard = "1.2.0"
serde = "1.0.210"
serde-xml-rs = "0.8.0"
serde_json = "1.0.128"
strum = { version = "0.26.2", features = ["derive"] }
strum_macros = "0.26.2"
tokio = { version = "1.40.0", features = ["full"] }
tower-lsp = "0.20.0"
unicase = "2.7.0"
urlencoding = "2.1.3"
xml-rs = "0.8.26"

[build-dependencies]
prost-build = "0.13.2"
protobuf-src = "2.1.0"
pbjson-build = "0.7.0"
